--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
 
     <!-- Normalize css  -->
-    <link rel="stylesheet" href="/Normalize.css/" />
+    <link rel="stylesheet" href="Normalize.css/" />
 
     <!-- font awesome -->
     <link
