--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="row">
           <div class="col-md-4 lara-1">
             <a href=""
-              ><img class="card-img" src="/img/2nd-item.jpg" alt=""
+              ><img class="card-img" src="img/2nd-item.jpg" alt=""
             /></a>
             <div class="card text-center card-body">
               <h4 class="card-title">Card Title</h4>
@@ -157,7 +157,7 @@
 
           <div class="col-md-4">
             <div data-toggle="modal" data-target="#portfolio-1">
-              <img src="/img/6th-item.jpg" class="img-fluid w-100" alt="..." />
+              <img src="img/6th-item.jpg" class="img-fluid w-100" alt="..." />
             </div>
             <div class="card text-center card-body">
               <h4 class="card-title">Card Title</h4>
@@ -170,7 +170,7 @@
 
           <div class="col-md-4">
             <a href=""
-              ><img class="card-img" src="/img/3rd-item.jpg" alt=""
+              ><img class="card-img" src="img/3rd-item.jpg" alt=""
             /></a>
             <div class="card text-center card-body">
               <h4 class="card-title">Card Title</h4>
@@ -188,7 +188,7 @@
     <div class="background-4" id="our-story">
       <div class="container">
         <div class="mid">
-          <img class="card-img-top" src="/img/4th-item.jpg"">
+          <img class="card-img-top" src="img/4th-item.jpg"">
           <div class="card">
             <p class="card-text text-center">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo,
