--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         </button>
 
         <div class="modal-body text-center">
-          <img src="/img/5th-item.jpg" alt="" />
+          <img src="img/5th-item.jpg" alt="" />
         </div>
       </div>
     </div>  
