--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="column-1">
-              <h1>More about Vanilla</h1>
+              <h1>More about Pirates</h1>
 
               <p>
                 Vanilla is free HTML CSS template with Bootstrap v4.2.1 and you
