--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
       </div>
 
       <!-- first page  -->
-      <div class="page-1">
+      <div class="page-1 row">
+          <div class="col-sm-4">
         <h1>pirates</h1>
         <h2>Lorem ipsum dolor sit.</h2>
         <button>Discover more</button>
       </div>
+    </div>
     </div>
 
     <!-- Second page -->
